<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/teal_700"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <TextView
                android:id="@+id/tvCurrentFolder"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewFiles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <TextView
        android:id="@+id/tvEmptyFolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/empty_folder"
        android:visibility="invisible" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/mainFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="@dimen/default_margin"
            android:background="@color/gray"
            android:backgroundTint="@color/fab_color"
            android:contentDescription="@string/add_new_file"
            android:elevation="10dp"
            android:src="@drawable/ic_fab_add"
            app:borderWidth="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:id="@+id/llFileCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/mainFab"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/tvLabelFileCreate"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margin"
                android:background="@drawable/bg_fab_label"
                android:elevation="2dp"
                android:padding="@dimen/default_padding"
                android:text="@string/file"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:typeface="normal" />


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabFileCreate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/gray"
                android:clickable="true"
                android:focusable="true"
                android:tint="@android:color/white"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_file_text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llDirectoryCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/llFileCreate"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/tvLabelDirectoryCreate"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margin"
                android:background="@drawable/bg_fab_label"
                android:elevation="2dp"
                android:padding="@dimen/default_padding"
                android:text="@string/directory"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:typeface="normal" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabDirectoryCreate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/gray"
                android:clickable="true"
                android:focusable="true"
                android:tint="@android:color/white"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_folder" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>